# wstpserver-manager

./: MANIFEST.in  README.md  pyproject.toml
.github/workflows/: build-tray.yml
common/: detect-wolfram.sh  wstpserver.conf.json.template
linux/: install.sh  uninstall.sh  wstpserver.service.template
macos/: com.wolfram.wstpserver.plist.template  install.sh  uninstall.sh
packaging/installers/: install.sh
packaging/installers/linux/: build-installer.sh  installer.sh.in
packaging/installers/macos/: build-pkg.sh  postinstall
packaging/installers/windows/: WSTPServerManager.iss  build-installer.ps1
packaging/pyinstaller/: entrypoint.py  wstpserver-tray.spec
src/wolfram_pool_tray/: __init__.py  app.py  cli.py  service.py
src/wolfram_wstpserver_tray.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_kernel_grid.py  test_service.py
windows/: install.ps1  uninstall.ps1
